- fix mapping in CatController - rename message for access denied for burrow keeper - rename method for find cat with access check - add getVets in ClinicController - change List.of on Collections.emptyList() - side notes for me - create (but not finished) Cat unit and integration tests