@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.function.Function;
@@ -50,7 +51,7 @@ public class JwtUtil {
                         .map(String.class::cast)
                         .toList();
             }
-            return List.of();
+            return Collections.emptyList();
         });
     }
 
